--- a/views/admin/adcanhan/doimatkhau.ejs
+++ b/views/admin/adcanhan/doimatkhau.ejs
@@ -22,13 +22,13 @@
                                         </div>
                                         <form id="formChangePass" method="POST" action="/admin/canhan/doimatkhauPost" >
                                             <label>Mật khẩu cũ</label>
-                                            <input type="text" class="form-control" name="mkcu"
+                                            <input type="password" class="form-control" name="mkcu"
                                                 placeholder="Mật khẩu cũ"><br>
                                                 <label>Mật khẩu mới</label>
-                                            <input type="text" id="oldpass" class="form-control" name="mkmoi"
+                                            <input type="password" id="oldpass" class="form-control" name="mkmoi"
                                                 placeholder="Mật khẩu mới"><br>
                                                 <label>Xác nhận mật khẩu</label>
-                                            <input type="text" class="form-control" name="xacnhanmk"><br>
+                                            <input type="password" class="form-control" name="xacnhanmk"><br>
                                             <input type="submit" name="xacnhan" value="Xác nhận"
                                                 class="btn btn-primary"><br/>
                                             <br/>
