--- a/views/client/donhang/donhang.ejs
+++ b/views/client/donhang/donhang.ejs
@@ -58,11 +58,11 @@
                                                     <label>Hình thức giao hàng <span class="required">*</span></label>
                                                     <select class="form-control" id="giaohang" name="giaohang">
                                                         <option value="">Chọn hình thức giao hàng</option>
-                                                        <option value="0" name="checkgiaohang">Thanh toán khi nhận hàng
+                                                        <option value="0" >Thanh toán khi nhận hàng
                                                         </option>
-                                                        <option value="1" name="checkgiaohang">Thanh toán qua thẻ MOMO
+                                                        <option value="1" >Thanh toán qua thẻ MOMO
                                                         </option>
-                                                        <option value="2" name="checkgiaohang">Thanh toán qua thẻ VNPAY
+                                                        <option value="2" >Thanh toán qua thẻ VNPAY
                                                         </option>
                                                     </select>
                                                 </div>
